# lindle

./: .dockerignore  .gitignore  COMMERCIAL-LICENSE.md  COPYRIGHT  Dockerfile  README.md  docker-compose.yml  start.sh
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
backend/: main.py  pyproject.toml  shared_llm.py
backend/agent/: __init__.py  engine.py  models.py
backend/api/: app.py  auth_service.py  user_context.py
backend/api/routes/: agents.py  auth.py  codegen.py  execution.py  plugins.py  proxy.py  settings.py  workflow.py  workflow_edit.py  workspace.py
backend/codegen/: generator.py
backend/exporters/: __init__.py  manifests.py
backend/flow/: __init__.py  blocks.py  canonical.py  context.py  engine.py  execution_plan.py  flowspec.py  materialize.py  models.py  validation.py
backend/miniflow/: __init__.py  blocks.py  context.py  engine.py  llm.py  models.py  tools.py
backend/plugins/: __init__.py  analyst_soul.py  base.py  custom_skills.py  mock_tool.py  registry.py  stock_analysis.py  workflow_designer.py  workflow_executor.py
backend/storage/: agent_chat_store.py  agent_store.py  file_store.py  local_paths.py  user_scoped.py
backend/tests/: test_agent_conversation_store.py  test_export_manifests.py  test_github_skill_import.py  test_proxy_router.py  test_shared_llm_router.py  test_workflow_normalization.py
docs/: README.md  architecture.md
docs/aesthetic/: README.md  implementation.md  (+3 more)
examples/: stock_analysis.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+83 files in other folders)
